@@ -24,7 +24,7 @@ KXPROTO_STRING, KXPROTO_CODEBLOCK,
 KXPROTO_SCOPEDBLOCK, KXPROTO_EXCEPTION, KXPROTO_LIST,
 KXPROTO_FILE, KXPROTO_BYTEARRAY, KXPROTO_CHARACTER,
 KXPROTO_DICTIONARY, KXPROTO_DYNLIB, KXPROTO_FLOAT,
-KXPROTO_MODULE,KXPROTO_SET,
+KXPROTO_MODULE,KXPROTO_SET,KXPROTO_ARRAY2D,
 KXPROTOS_COUNT } KxBasicPrototypes;
 
 typedef enum {
